// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Purchase Stats Screen Component display a message if there are no stats 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#ffffff",
      "height": "100%",
    }
  }
>
  <View>
    <View
      style={
        Object {
          "marginHorizontal": "10%",
          "marginVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignContent": "space-between",
            "flexDirection": "row",
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            Object {
              "width": 25,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#000000",
              "flexGrow": 100,
              "fontFamily": "Abel",
              "fontSize": 22,
              "justifyContent": "center",
              "textAlign": "center",
            }
          }
        >
          04/01/21
           - 
          10/01/21
        </Text>
        <View
          style={
            Object {
              "width": 25,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#959595",
            "fontFamily": "Abel",
            "fontSize": 20,
            "marginTop": 30,
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        No Stats For This Time Period
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Purchase Stats Screen Component will display purchase stats based on the state 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#ffffff",
      "height": "100%",
    }
  }
>
  <View>
    <View
      style={
        Object {
          "marginHorizontal": "10%",
          "marginVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignContent": "space-between",
            "flexDirection": "row",
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            Object {
              "width": 25,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <
              color="#959595"
              icon={
                Object {
                  "icon": Array [
                    320,
                    512,
                    Array [],
                    "f053",
                    "M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z",
                  ],
                  "iconName": "chevron-left",
                  "prefix": "fas",
                }
              }
              size={25}
            />
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "#000000",
              "flexGrow": 100,
              "fontFamily": "Abel",
              "fontSize": 22,
              "justifyContent": "center",
              "textAlign": "center",
            }
          }
        >
          04/01/21
           - 
          10/01/21
        </Text>
        <View
          style={
            Object {
              "width": 25,
            }
          }
        />
      </View>
      <Text
        style={
          Object {
            "color": "#959595",
            "fontFamily": "Abel",
            "fontSize": 20,
            "marginTop": 30,
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        No Stats For This Time Period
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
